Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,9 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -61,7 +74,7 @@
        "data": [
         {
          "type": "scatter",
-         "uid": "2de02f9c-20e3-11e9-be8a-cf6c3314665c",
+         "uid": "87ed6ab6-4b5b-11e9-ba2b-5788f1b15522",
          "x": [
           1,
           2,
@@ -75,7 +88,7 @@
         },
         {
          "type": "scatter",
-         "uid": "2de031b8-20e3-11e9-be8a-cf6c3314665c",
+         "uid": "87ed6d36-4b5b-11e9-ba2b-5788f1b15522",
          "x": [
           2,
           3,
@@ -93,10 +106,10 @@
        }
       },
       "text/html": [
-       "<div id=\"01f88c77-ce1f-4be8-b41e-1615f95e59c0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01f88c77-ce1f-4be8-b41e-1615f95e59c0\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"2e01de58-20e3-11e9-be8a-cf6c3314665c\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"2e01e010-20e3-11e9-be8a-cf6c3314665c\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"de0ae62a-607b-4f0f-a095-e0f50a6b756c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"de0ae62a-607b-4f0f-a095-e0f50a6b756c\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"88131b4e-4b5b-11e9-ba2b-5788f1b15522\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"88131d24-4b5b-11e9-ba2b-5788f1b15522\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"01f88c77-ce1f-4be8-b41e-1615f95e59c0\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"01f88c77-ce1f-4be8-b41e-1615f95e59c0\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"2e01de58-20e3-11e9-be8a-cf6c3314665c\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"2e01e010-20e3-11e9-be8a-cf6c3314665c\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"de0ae62a-607b-4f0f-a095-e0f50a6b756c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"de0ae62a-607b-4f0f-a095-e0f50a6b756c\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"88131b4e-4b5b-11e9-ba2b-5788f1b15522\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"88131d24-4b5b-11e9-ba2b-5788f1b15522\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
